[package]
name = "tetcoin-service"
version = "0.8.3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Tetcore Client
tc-authority-discovery = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
babe = { package = "tc-consensus-babe", git = "https://github.com/tetcoin/tetcore", branch = "master" }
grandpa = { package = "tc-finality-grandpa", git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-block-builder = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-chain-spec = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-client-api = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-client-db = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-consensus = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-consensus-slots = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-executor = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-finality-grandpa-warp-sync = { git = "https://github.com/tetcoin/tetcore", branch = "master", optional = true }
tc-network = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tc-transaction-pool = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
service = { package = "tc-service", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
telemetry = { package = "tc-telemetry", git = "https://github.com/tetcoin/tetcore", branch = "master" }

# Tetcore Primitives
tp-authority-discovery = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
babe-primitives = { package = "tp-consensus-babe", git = "https://github.com/tetcoin/tetcore", branch = "master" }
consensus_common = { package = "tp-consensus", git = "https://github.com/tetcoin/tetcore", branch = "master" }
grandpa_primitives = { package = "tp-finality-grandpa", git = "https://github.com/tetcoin/tetcore", branch = "master" }
inherents = { package = "tp-inherents", git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-api = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-block-builder = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-blockchain = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tet-core = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tet-io = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-offchain = { package = "tp-offchain", git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-runtime = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-session = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tetcore-storage = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-transaction-pool = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-trie = { version = "2.0.2" }
tp-state-machine = { git = "https://github.com/tetcoin/tetcore", branch = "master" }

# Tetcore Pallets
noble-babe = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
noble-im-online = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
noble-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
noble-transaction-payment-rpc-runtime-api = { git = "https://github.com/tetcoin/tetcore", branch = "master" }

# Tetcore Other
fabric-benchmarking = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
fabric-system-rpc-runtime-api = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
prometheus-endpoint = { version = "0.8.1" }

# External Crates
futures = "0.3.12"
hex-literal = "0.3.1"
tracing = "0.1.22"
tracing-futures = "0.2.4"
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.23"

# Tetcoin
tetcoin-node-core-proposer = { path = "../core/proposer" }
tetcoin-overseer = { path = "../overseer" }
tetcoin-parachain = { path = "../../parachain" }
tetcoin-primitives = { path = "../../primitives" }
tetcoin-rpc = { path = "../../rpc" }
tetcoin-subsystem = { package = "tetcoin-node-subsystem", path = "../subsystem" }
tetcoin-node-subsystem-util = { path = "../subsystem-util" }
tetcoin-runtime-parachains = { path = "../../runtime/parachains" }

# Tetcoin Runtimes
tetcoin-runtime = { path = "../../runtime/tetcoin" }
kusama-runtime = { path = "../../runtime/kusama" }
westend-runtime = { path = "../../runtime/westend" }
rococo-runtime = { path = "../../runtime/rococo" }

# Tetcoin Subsystems
tetcoin-availability-bitfield-distribution = { path = "../network/bitfield-distribution", optional = true }
tetcoin-availability-distribution = { path = "../network/availability-distribution", optional = true }
tetcoin-availability-recovery = { path = "../network/availability-recovery", optional = true }
tetcoin-collator-protocol = { path = "../network/collator-protocol", optional = true }
tetcoin-network-bridge = { path = "../network/bridge", optional = true }
tetcoin-node-collation-generation = { path = "../collation-generation", optional = true }
tetcoin-node-core-av-store = { path = "../core/av-store", optional = true }
tetcoin-node-core-backing = { path = "../core/backing", optional = true }
tetcoin-node-core-bitfield-signing = { path = "../core/bitfield-signing", optional = true }
tetcoin-node-core-candidate-selection = { path = "../core/candidate-selection", optional = true }
tetcoin-node-core-candidate-validation = { path = "../core/candidate-validation", optional = true }
tetcoin-node-core-chain-api = { path = "../core/chain-api", optional = true }
tetcoin-node-core-provisioner = { path = "../core/provisioner", optional = true }
tetcoin-node-core-runtime-api = { path = "../core/runtime-api", optional = true }
tetcoin-pov-distribution = { path = "../network/pov-distribution", optional = true }
tetcoin-statement-distribution = { path = "../network/statement-distribution", optional = true }
tetcoin-approval-distribution = { path = "../network/approval-distribution", optional = true }

[dev-dependencies]
tetcoin-test-client = { path = "../test/client" }
env_logger = "0.8.2"

[features]
default = ["db", "full-node"]
db = ["service/db"]
full-node = [
	"tetcoin-node-core-av-store",
	"tc-finality-grandpa-warp-sync"
]

runtime-benchmarks = [
	"tetcoin-runtime/runtime-benchmarks",
	"kusama-runtime/runtime-benchmarks",
	"westend-runtime/runtime-benchmarks",
	"rococo-runtime/runtime-benchmarks"
]

real-overseer = [
	"tetcoin-availability-bitfield-distribution",
	"tetcoin-availability-distribution",
	"tetcoin-availability-recovery",
	"tetcoin-collator-protocol",
	"tetcoin-network-bridge",
	"tetcoin-node-collation-generation",
	"tetcoin-node-core-backing",
	"tetcoin-node-core-bitfield-signing",
	"tetcoin-node-core-candidate-selection",
	"tetcoin-node-core-candidate-validation",
	"tetcoin-node-core-chain-api",
	"tetcoin-node-core-provisioner",
	"tetcoin-node-core-runtime-api",
	"tetcoin-pov-distribution",
	"tetcoin-statement-distribution",
	"tetcoin-approval-distribution",
]
