[package]
name = "tetcoin-node-subsystem-test-helpers"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.12"
futures-timer = "3.0.2"
tracing = "0.1.22"
# tracing-futures = "0.2.4"
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
parking_lot = "0.11.1"
pin-project = "1.0.4"
tetcoin-node-primitives = { version = "0.1.0", path = "../primitives" }
tetcoin-node-subsystem = { path = "../subsystem" }
tetcoin-node-subsystem-util = { path = "../subsystem-util" }
tetcoin-primitives = { version = "0.8.28", path = "../../primitives" }
tetcoin-statement-table = { path = "../../statement-table" }
tc-network = { version = "0.8.0" }
smallvec = "1.6.1"
tet-core = "2.0.2"

[dev-dependencies]
tetcoin-overseer = { path = "../overseer" }
