[package]
name = "tetcoin-node-subsystem-util"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.12"
futures-timer = "3.0.2"
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
parking_lot = { version = "0.11.1", optional = true }
pin-project = "1.0.4"
streamunordered = "0.5.1"
thiserror = "1.0.23"
tracing = "0.1.22"
tracing-futures = "0.2.4"

tetcoin-node-primitives = { path = "../primitives" }
tetcoin-node-subsystem = { path = "../subsystem" }
tetcoin-node-jaeger = { path = "../jaeger" }
tetcoin-primitives = { path = "../../primitives" }
metered-channel = { path = "../metered-channel"}

tc-network = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tet-core = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-application-crypto = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tetcore-prometheus-endpoint = { git = "https://github.com/tetcoin/tetcore", branch = "master" }

[dev-dependencies]
assert_matches = "1.4.0"
async-trait = "0.1.42"
env_logger = "0.8.2"
futures = { version = "0.3.12", features = ["thread-pool"] }
log = "0.4.13"
parking_lot = "0.11.1"
tetcoin-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
