[package]
name = "tetcoin-node-subsystem"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-std = "1.8.0"
async-trait = "0.1.42"
derive_more = "0.99.11"
futures = "0.3.12"
futures-timer = "3.0.2"
mick-jaeger = "0.1.2"
lazy_static = "1.4"
tracing = "0.1.22"
tracing-futures = "0.2.4"
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
parking_lot = "0.11.1"
pin-project = "1.0.4"
tetcoin-node-primitives = { path = "../primitives" }
tetcoin-node-network-protocol = { path = "../network/protocol" }
tetcoin-primitives = { path = "../../primitives" }
tetcoin-statement-table = { path = "../../statement-table" }
tetcoin-node-jaeger = { path = "../jaeger" }
tc-network = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
smallvec = "1.6.1"
tet-core = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tetcore-prometheus-endpoint = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
thiserror = "1.0.23"
log = "0.4.13"

[dev-dependencies]
assert_matches = "1.4.0"
async-trait = "0.1.42"
futures = { version = "0.3.12", features = ["thread-pool"] }
tetcoin-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
