[package]
name = "test-parachains"
version = "0.7.22"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Integration tests using the test-parachains"
edition = "2018"

[dependencies]
tiny-keccak = "2.0.2"
tetsy-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

parachain = { version = "0.8.28", package = "tetcoin-parachain", path = ".." }
adder = { package = "test-parachain-adder", path = "adder" }
halt = { package = "test-parachain-halt", path = "halt" }

[dev-dependencies]
tet-core = "2.0.2"

[features]
default = [ "std" ]
std = [
	"adder/std",
	"halt/std",
]
