[package]
name = "tetcoin-runtime-common"
version = "0.8.28"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.22.3", default-features = false, features = ["alloc"] }
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
log = { version = "0.4.13", optional = true }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"

tp-api = { version = "2.0.2", default-features = false }
inherents = { package = "tp-inherents", version = "2.0.2", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tet-io = { version = "2.0.2", default-features = false }
tp-runtime = { version = "2.0.2", default-features = false }
tp-session = { version = "2.0.2", default-features = false }
tp-staking = { version = "2.0.2", default-features = false }
tet-core = { version = "2.0.2", default-features = false }

noble-authorship = { version = "2.0.1", default-features = false }
noble-balances = { version = "2.0.1", default-features = false }
noble-session = { version = "2.0.0", default-features = false }
fabric-support = { version = "2.0.0", default-features = false }
noble-staking = { version = "2.0.0", default-features = false }
fabric-system = { version = "2.0.0", default-features = false }
noble-timestamp = { version = "2.0.0", default-features = false }
noble-vesting = { version = "2.0.0", default-features = false }
noble-offences = { version = "2.0.1", default-features = false }
noble-transaction-payment = { version = "2.0.0", default-features = false }
noble-treasury = { version = "2.0.0", default-features = false }
fabric-benchmarking = { version = "2.0.0", default-features = false, optional = true }

primitives = { version = "0.8.28", package = "tetcoin-primitives", path = "../../primitives", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false, optional = true }
runtime-parachains = { package = "tetcoin-runtime-parachains", path = "../parachains", default-features = false }

xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
keyring = { package = "tp-keyring", version = "2.0.2" }
tp-trie = { version = "2.0.2" }
noble-babe = { version = "2.0.1" }
tet-application-crypto = { version = "2.0.2" }
noble-randomness-collective-flip = { version = "2.0.0" }
noble-staking-reward-curve = { version = "2.0.0" }
noble-treasury = { version = "2.0.0" }
trie-db = "0.22.2"
serde_json = "1.0.61"
libsecp256k1 = "0.3.5"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"tetsy-scale-codec/std",
	"log",
	"rustc-hex/std",
	"serde_derive",
	"serde/std",
	"primitives/std",
	"inherents/std",
	"tet-core/std",
	"tp-api/std",
	"tetcore-std/std",
	"tet-io/std",
	"fabric-support/std",
	"noble-authorship/std",
	"noble-balances/std",
	"tp-runtime/std",
	"tp-session/std",
	"tp-staking/std",
	"noble-session/std",
	"noble-staking/std",
	"fabric-system/std",
	"noble-timestamp/std",
	"noble-vesting/std",
	"noble-transaction-payment/std",
	"runtime-parachains/std",
	"xcm/std",
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"fabric-benchmarking",
	"fabric-support/runtime-benchmarks",
	"fabric-system/runtime-benchmarks",
]
