[package]
name = "tetcoin-runtime-parachains"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tetsy-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = "0.4.13"
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", features = [ "derive" ], optional = true }
derive_more = "0.99.11"

tp-api = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
inherents = { package = "tp-inherents", git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tet-io = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-runtime = { version = "2.0.2", default-features = false }
tp-session = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tp-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tet-core = { version = "2.0.2", default-features = false }
tp-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master", optional = true }

noble-authority-discovery = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-authorship = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-balances = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-session = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-support = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-staking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-system = {git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-timestamp = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-vesting = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
noble-offences = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
fabric-benchmarking = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false, optional = true }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
primitives = { version = "0.8.28", package = "tetcoin-primitives", path = "../../primitives", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false, optional = true }

rand = { version = "0.8.3", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }

[dev-dependencies]
futures = "0.3.12"
hex-literal = "0.3.1"
keyring = { package = "tp-keyring", git = "https://github.com/tetcoin/tetcore", branch = "master" }
tp-trie = { version = "2.0.2" }
noble-babe = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
tet-application-crypto = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
noble-randomness-collective-flip = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
noble-staking-reward-curve = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
noble-treasury = { git = "https://github.com/tetcoin/tetcore", branch = "master" }
serde_json = "1.0.61"
libsecp256k1 = "0.3.5"
tp-version = { git = "https://github.com/tetcoin/tetcore", branch = "master", default-features = false }
tc-keystore = { git = "https://github.com/tetcoin/tetcore", branch = "master"}


[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"tetsy-scale-codec/std",
	"rustc-hex/std",
	"serde",
	"primitives/std",
	"inherents/std",
	"tet-core/std",
	"tp-api/std",
	"tp-keystore",
	"tetcore-std/std",
	"tet-io/std",
	"fabric-support/std",
	"noble-authorship/std",
	"noble-balances/std",
	"tp-runtime/std",
	"tp-session/std",
	"tp-staking/std",
	"noble-session/std",
	"noble-staking/std",
	"fabric-system/std",
	"noble-timestamp/std",
	"noble-vesting/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"fabric-benchmarking",
	"fabric-support/runtime-benchmarks",
	"fabric-system/runtime-benchmarks",
]
