[package]
name = "tetcoin-runtime-parachains"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.22.3", default-features = false, features = ["alloc"] }
tetsy-scale-codec = { version = "2.0.1", default-features = false, features = ["derive"] }
log = "0.4.13"
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", features = [ "derive" ], optional = true }
derive_more = "0.99.11"

tp-api = { version = "2.0.2", default-features = false }
inherents = { package = "tp-inherents", version = "2.0.2", default-features = false }
tetcore-std = { version = "2.0.2", default-features = false }
tet-io = { version = "2.0.2", default-features = false, features = [ "disable_oom", "disable_panic_handler" ] }
tp-runtime = { version = "2.0.2", default-features = false }
tp-session = { version = "2.0.2", default-features = false }
tp-staking = { version = "2.0.2", default-features = false }
tet-core = { version = "2.0.2", default-features = false }
tp-keystore = { version = "0.8.1", optional = true }

noble-authority-discovery = { version = "2.0.1", default-features = false }
noble-authorship = { version = "2.0.1", default-features = false }
noble-balances = { version = "2.0.1", default-features = false }
noble-session = { version = "2.0.0", default-features = false }
fabric-support = { version = "2.0.0", default-features = false }
noble-staking = { version = "2.0.0", default-features = false }
fabric-system = { version = "2.0.0", default-features = false }
noble-timestamp = { version = "2.0.0", default-features = false }
noble-vesting = { version = "2.0.0", default-features = false }
noble-offences = { version = "2.0.1", default-features = false }
fabric-benchmarking = { version = "2.0.0", default-features = false, optional = true }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
primitives = { version = "0.8.28", package = "tetcoin-primitives", path = "../../primitives", default-features = false }
libsecp256k1 = { version = "0.3.5", default-features = false, optional = true }

rand = { version = "0.8.3", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }

[dev-dependencies]
futures = "0.3.12"
hex-literal = "0.3.1"
keyring = { package = "tp-keyring", version = "2.0.2" }
tp-trie = { version = "2.0.2" }
noble-babe = { version = "2.0.1" }
tet-application-crypto = { version = "2.0.2" }
noble-randomness-collective-flip = { version = "2.0.0" }
noble-staking-reward-curve = { version = "2.0.0" }
noble-treasury = { version = "2.0.0" }
serde_json = "1.0.61"
libsecp256k1 = "0.3.5"
tp-version = { version = "2.0.2", default-features = false }
tc-keystore = { version = "2.0.0" }


[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"tetsy-scale-codec/std",
	"rustc-hex/std",
	"serde",
	"primitives/std",
	"inherents/std",
	"tet-core/std",
	"tp-api/std",
	"tp-keystore",
	"tetcore-std/std",
	"tet-io/std",
	"fabric-support/std",
	"noble-authorship/std",
	"noble-balances/std",
	"tp-runtime/std",
	"tp-session/std",
	"tp-staking/std",
	"noble-session/std",
	"noble-staking/std",
	"fabric-system/std",
	"noble-timestamp/std",
	"noble-vesting/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"libsecp256k1/hmac",
	"fabric-benchmarking",
	"fabric-support/runtime-benchmarks",
	"fabric-system/runtime-benchmarks",
]
